--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,3 +19,11 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.mapboxgl-popup {
+  width:300px !important;
+  max-width: unset !important;
+}
+.mapboxgl-popup-content{
+  padding: 0px !important;  
+}
